spasibo bog chto eto end

--- a/templates/assets/AssetManifest.json
+++ b/templates/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"lib/asset/infoBackground.svg":["lib/asset/infoBackground.svg"],"lib/asset/logout.svg":["lib/asset/logout.svg"],"lib/asset/mainBackground_1.svg":["lib/asset/mainBackground_1.svg"],"lib/asset/mainBackground_2.svg":["lib/asset/mainBackground_2.svg"],"lib/asset/mainBackground_3.svg":["lib/asset/mainBackground_3.svg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
